asupersync-macros/tests/compile_fail/entry_non_async_main.rs
use asupersync_macros::main;

#[main]
fn main() {}
