asupersync-macros/tests/compile_fail/entry_non_async_main.stderr
error: asupersync entry macros require an async function
 --> tests/compile_fail/entry_non_async_main.rs:4:1
  |
4 | fn main() {}
  | ^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/compile_fail/entry_non_async_main.rs:4:13
  |
4 | fn main() {}
  |             ^ consider adding a `main` function to `$DIR/tests/compile_fail/entry_non_async_main.rs`
